2008-12-06  Jaroslav Hajek  <highegg@gmail.com>

	* oct-locbuf.h (OCTAVE_LOCAL_BUFFER_INIT): New macro.

2008-10-29  Jaroslav Hajek  <highegg@gmail.com>

	* oct-locbuf.h: New header file.
	* Array-d.cc, Array-f.cc, Array.cc, CMatrix.cc, CNDArray.cc,
	CSparse.cc, CmplxCHOL.cc, CmplxGEPBAL.cc, MatrixType.cc,
	Sparse-op-defs.h, Sparse.cc, SparseCmplxLU.cc, SparseCmplxQR.cc,
	SparseQR.cc, SparsedbleLU.cc, dMatrix.cc, dNDArray.cc, dSparse.cc,
	data-conv.cc, dbleCHOL.cc, dbleGEPBAL.cc, fCMatrix.cc, fCNDArray.cc,
	fCmplxCHOL.cc, fCmplxGEPBAL.cc, fMatrix.cc, fNDArray.cc, file-ops.cc,
	floatCHOL.cc, floatGEPBAL.cc, lo-sysdep.cc, oct-fftw.cc, oct-md5.cc,
	oct-rand.cc, regex-match.cc, sparse-dmsolve.cc: Include oct-locbuf.h.

2008-12-04  Jaroslav Hajek  <highegg@gmail.com>

	* DiagArray2.h (DiagArray2<T>): Inherit Array<T> privately.
	(DiagArray2<T>::dim1, dim2, rows, columns, cols, length,
	nelem, numel, byte_size, dims): New methods.
	(DiagArray2<T>::diag): New method decl.
	* DiagArray2.cc (DiagArray2<T>::diag): New method.
	* MDiagArray2.h (MDiagArray2<T>::diag): New method.
	* dDiagMatrix.cc (DiagMatrix::diag): Remove.
	* fDiagMatrix.cc (FloatDiagMatrix::diag): Remove.
	* CDiagMatrix.cc (ComplexDiagMatrix::diag): Remove.
	* fCDiagMatrix.cc (FloatComplexDiagMatrix::diag): Remove.

	* PermMatrix.h (PermMatrix): Inherit Array<octave_idx_type> privately.
	(PermMatrix::dim1, dim2, rows, columns, cols, length,
	nelem, numel, byte_size, dims): New methods.

	
2008-12-04  Jaroslav Hajek  <highegg@gmail.com>
	
	* dDiagMatrix.cc (DiagMatrix::determinant, DiagMatrix::rcond): New
	method.
	* dDiagMatrix.h: Declare them.
	* fDiagMatrix.cc (FloatDiagMatrix::determinant,
	FloatDiagMatrix::rcond): New methods.
	* fDiagMatrix.h: Declare them.
	* CDiagMatrix.cc (ComplexDiagMatrix::determinant,
	ComplexDiagMatrix::rcond): New methods.
	* CDiagMatrix.h: Declare them.
	* fCDiagMatrix.cc (FloatComplexDiagMatrix::determinant,
	FloatComplexDiagMatrix::rcond): New methods.